--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="header__column">
           <div class="header-title">
             <img src="img/icon.jpg" />
-            <span>Welcome</span>
+            <span>welcome</span>
           </div>
         </div>
         <div class="header__column">
