index.html script

--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
         </div>
       </div>
     </main>
-    <script src="js/login.js"></script>
-    <script src="js/clock.js"></script>
-    <script src="js/background.js"></script>
-    <script src="js/weather.js"></script>
-    <script src="js/todo.js"></script>
-    <script src="js/quote.js"></script>
+    <script src="JS/login.js"></script>
+    <script src="JS/clock.js"></script>
+    <script src="JS/background.js"></script>
+    <script src="JS/weather.js"></script>
+    <script src="JS/todo.js"></script>
+    <script src="JS/quote.js"></script>
   </body>
 </html>
