js index.html modify

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
       <div class="header">
         <div class="header__column">
           <div class="header-title">
-            <img src="img/icon.jpg" />
+            <form class="logout-button">
+              <button>
+                <img src="img/icon.jpg" />
+              </button>
+            </form>
             <span>welcome</span>
           </div>
         </div>
