--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="header_clock">
               <div id="clock">00:00:00</div>
               <div class="header_day">
-                <input type="date" id="today" />
+                <div id="day"></div>
               </div>
             </div>
             <div class="header_weather">
