Created Menu Animation

--- a/index.html
+++ b/index.html
@@ -61,6 +61,24 @@
 
       <!-- 콘텐츠 TODOLIST -->
       <div class="content">
+        <div class="content_menu">
+          <div class="content_menu_title">
+            <span>Menu</span>
+            <a class="menu-trigger" href="#">
+              <span></span>
+              <span></span>
+              <span></span>
+            </a>
+          </div>
+          <div id="content_menu_list" class="hidden">
+            <div>TODO LIST</div>
+            <div>TIME</div>
+            <div>USER NAME</div>
+            <div>WELCOME</div>
+            <div>TODAY</div>
+            <div>WEATHER</div>
+          </div>
+        </div>
         <div class="content_todo">
           <form id="todo-form">
             <input required type="text" placeholder="Todo List Enter" />
@@ -102,5 +120,6 @@
     <script src="JS/weather.js"></script>
     <script src="JS/todo.js"></script>
     <script src="JS/quote.js"></script>
+    <script src="JS/menu.js"></script>
   </body>
 </html>
