Function menu-game
메뉴의 리스트중 게임을 클릭하면 화면중앙에 생기고 다시누르면 사라지는 기능  추가

--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
             <li>WELCOME</li>
             <li>TODAY</li>
             <li>WEATHER</li>
-            <li>NEW GAME🎮</li>
+            <li id="random-game">RANDOM GAME🎮</li>
           </ul>
         </div>
 
-        <div class="content-game">
+        <div class="content-game hidden">
           <h1>Random Game🎮</h1>
           <div class="content-game__header">
             <span>Generate a number between 0 end</span>
