--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Kavoon&family=Merriweather:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Kavoon&display=swap"
       rel="stylesheet"
     />
     <link
